# NexaChat

./: .dockerignore  .env.example  .gitignore  .gitleaks.toml  .semgrep.yml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  NOTICE  README.md  ROADMAP.md  SECURITY.md  architecture-boundaries.json  compose.cloudflare-tunnel.yml  compose.development.yml  compose.production.yml  docker-compose.yml  eslint.config.js  package-lock.json  package.json  security-policy.json  tsconfig.base.json
.changes/: 101-versioning-changelog.json  102-signed-release-artifacts.json  103-supported-upgrade-paths.json  104-release-candidate-validation.json  117-update-rollback-recovery.json  118-support-compatibility.json  README.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
apps/desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
apps/desktop/src-tauri/capabilities/: main.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/permissions/autogenerated/: clear_stored_accounts.toml  credential_store_status.toml  deliver_desktop_notification.toml  desktop_notification_status.toml  list_stored_accounts.toml  remove_stored_account.toml  request_desktop_notification_permission.toml  select_stored_account.toml  store_session_credential.toml
apps/desktop/src-tauri/src/: credentials.rs  lib.rs  main.rs  notifications.rs
deploy/: production.env.example
docs/: accessibility.md
release/: candidate-policy.json  support-policy.json  update-policy.json  upgrade-policy.json
scripts/: build-server-production.mjs  check-toolchain.sh  dev-up.sh  run-browser-e2e.sh  run-secret-scan.sh  run-static-analysis.sh  scan-production-images.sh  (+17 more)
(+275 files in other folders)
