[package]
name = "nexa-desktop"
version = "0.1.0"
description = "Least-privilege desktop shell for Nexa Chat"
authors = ["Nexa Chat contributors"]
license = "GPL-3.0-only"
repository = "https://github.com/cryptnetworks/NexaChat"
edition = "2024"
rust-version = "1.97.1"
build = "build.rs"

[lib]
name = "nexa_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "=2.6.3", features = [] }

[dependencies]
keyring = "=4.1.5"
serde = { version = "=1.0.229", features = ["derive"] }
serde_json = "=1.0.151"
sha2 = "=0.10.9"
tauri = { version = "=2.11.5", features = [] }
tauri-plugin-opener = "=2.5.4"
tauri-plugin-single-instance = "=2.4.3"
time = { version = "=0.3.54", features = ["formatting", "parsing"] }
uuid = "=1.24.0"
zeroize = "=1.9.0"

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = "symbols"
